<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment">

    <TextView
        android:id="@+id/test_start_title_text"
        style="@style/TitleTextViewStyle"
        android:text="@string/test_start_title_text" />

    <View
        android:id="@+id/test_start_dividing_line"
        style="@style/RoundedLineStyle"
        android:layout_below="@id/test_start_title_text"
        android:background="@drawable/rounded_recycler" />

    <TextView
        android:id="@+id/testTypeTextView"
        style="@style/SubtitleTestTextStyle"
        android:layout_below="@id/test_start_dividing_line"
        android:text="@string/page_test_type_text" />

    <RadioGroup
        android:id="@+id/radioGroupTestType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/testTypeTextView"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioKnowWord"
            style="@style/TestStartButtonStyle"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circle_main_test_back"
            android:buttonTint="@color/blueButton"
            android:text="@string/button_know_test_type_text" />

        <RadioButton
            android:id="@+id/radioWriteWord"
            style="@style/TestStartButtonStyle"
            android:layout_marginBottom="20dp"
            android:background="@drawable/circle_main_test_back"
            android:buttonTint="@color/blueButton"
            android:text="@string/button_write_test_type_text" />

    </RadioGroup>

    <TextView
        android:id="@+id/topicTextView"
        style="@style/SubtitleTestTextStyle"
        android:layout_below="@id/radioGroupTestType"
        android:text="@string/page_test_topic_name_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTopics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonStartTest"
        android:layout_below="@id/topicTextView"
        android:layout_marginStart='40dp'
        android:layout_marginEnd='40dp'
        android:layout_marginBottom='10dp'
        android:background="@drawable/circle_main_test_big_back"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/buttonStartTest"
        style="@style/RegularButtonStyle"
        android:layout_marginBottom="15dp"
        android:text="@string/button_start_test_text" />

</RelativeLayout>
