<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/topicName"
        style="@style/TitleTextViewStyle"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/inter_bold"
        android:text="@string/topicName_stub_text" />

    <View
        android:id="@+id/dividing_line"
        style="@style/RoundedLineStyle"
        android:layout_below="@id/topicName"
        android:background="@drawable/rounded_recycler" />

    <FrameLayout
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividing_line"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="31dp">

        <include
            android:id="@+id/cardFront"
            layout="@layout/card_front"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <include
            android:id="@+id/cardBack"
            layout="@layout/card_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <Button
        android:id="@+id/buttonShowTranslation"
        style="@style/RegularButtonRelativeStyle"
        android:layout_below="@id/buttonLayout"
        android:text="@string/button_translate_text" />

    <Button
        android:id="@+id/buttonFinishTest"
        style="@style/RegularButtonRelativeStyle"
        android:layout_below="@id/buttonShowTranslation"
        android:backgroundTint="#EB2828"
        android:text="@string/button_finish_test_text" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/buttonKnow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="#49BD63"
            android:text="@string/button_know_text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDontKnow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:backgroundTint="#D37926"
            android:text="@string/button_not_know_text"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
